Backend: Integrated AWS S3 for file handling and cloud storage